--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diamond Price Predictor</title>
+    <title>Diamond Pricer</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -49,9 +49,9 @@
 </head>
 <body>
 
-<!-- Navigation Bar -->
+<!-- Navigation Bar
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Diamond Price Predictor</a>
+    <a class="navbar-brand" href="#">Diamond Pricer</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -65,20 +65,20 @@
             </li>
         </ul>
     </div>
-</nav>
+</nav> -->
 
 <!-- Header Section -->
 <header class="header">
     <div class="container">
-        <h1>Welcome to Diamond Price Predictor</h1>
-        <p>Accurately predict diamond prices based on key features</p>
+        <h1>Welcome to Diamond Pricer</h1>
+        <p>Where we approximately predict diamond prices based on key features</p>
     </div>
 </header>
 
 <!-- Form Section -->
 <div class="container" id="predict">
     <div class="form-container mt-5">
-        <h2 class="mb-4 text-center">Diamond Price Prediction</h2>
+        <h2 class="mb-4 text-center">Diamond Pricer</h2>
         <form action="{{url_for('predict_datapoint')}}" method="POST">
             <div class="form-group">
                 <label for="carat">Carat:</label>
@@ -160,7 +160,7 @@
 
 <!-- Footer -->
 <footer>
-    <p>&copy; 2024 Diamond Price Predictor. All rights reserved.</p>
+    <p>&copy; 2024 Diamond Pricer. All rights reserved.</p>
 </footer>
 
 <!-- Bootstrap JS and dependencies -->
