--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diamond Price Prediction Result</title>
+    <title>Diamond Pricer</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -47,7 +47,7 @@
 
 <div class="result-container">
     <h1>Diamond Price Will be {{ final_result }}</h1>
-    <p>Thank you for using our Diamond Price Predictor. We hope you found our service useful!</p>
+    <p>Thank you for using our Diamond Pricer. We hope you found our service useful!</p>
     <a href="/" class="btn btn-primary">Predict Another</a>
     <!-- <img src="/image/diamond-316610_640.jpg" alt="Diamond Image"> -->
 </div>
